fixed alignment of preloader also made it a bit bigger since it's so nice looking

--- a/stylesheets/icons.styl
+++ b/stylesheets/icons.styl
@@ -118,9 +118,9 @@
 //
 @keyframes spinner-rotate 
   from 
-    transform rotate(0deg)
+    transform rotate(0deg) scaleZ(0)
   to 
-    transform rotate(360deg)
+    transform rotate(360deg) scaleZ(0)
   
 
 
