--- a/stylesheets/state.styl
+++ b/stylesheets/state.styl
@@ -28,18 +28,24 @@
     height 100%
     width 100%
 
+    .computer
+      font-size 300px
+
     .spinner
       position absolute
-      width 30px
-      height 30px
-      font-size 30px
+      width 100px
+      height 100px
+      font-size 100px
       left 50%
       top 50%
-      margin -24px 0 0 -15px
+      margin -77px 0 0 -50px
       color $color-beige
       animation spinner-rotate 1.5s linear infinite
       line-height 0
       letter-spacing 0
+
+      transform-origin center center
+      backface-visibility hidden
 
   &.state.game-instructions,
   &.state.game-start
@@ -357,6 +363,7 @@
 #level
   &.inactive
     display none
+
 #extras
   position absolute
   right 60px
@@ -371,6 +378,7 @@
     height 36px
     position relative
     font-size .8em
+    display none
     &:before
       background #FFF
       font-size 2.1em
